# ampelmatch

./: .gitignore  pyproject.toml
ampelmatch/: __init__.py  cache.py
ampelmatch/data/: config.py  constrain_transient_area.py  dataset.py  extract_survey_area.py  fermi_4lac_dr2.py  generate_test_data.py  icecube_alert.py  make_plots.py  plotter.py  positional_dataset.py  positional_survey.py  positional_uncertainty.py  surveys.py  transients.py
ampelmatch/illustration/: nearest_neightbour.py  prior.py
ampelmatch/match/: bayes_factor.py  gaussian.py  match.py  prior.py  test_4lac.py  test_gaussian.py  test_icecube.py  test_sim.json  test_sim_icecube.json
