[tool.poetry]
name = "ampelmatch"
version = "0.1.0"
description = ""
authors = ["Jannis Necker <jannis.necker@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
skysurvey = "^0.17.2"
ampel-hu-astro = "^0.10.0a5"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
