[tool.poetry]
name = "ampelmatch"
version = "0.1.0"
description = ""
authors = ["Jannis Necker <jannis.necker@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
skysurvey = "^0.17.2"
ampel-hu-astro = "^0.10.0a5"
rich = "^13.9.4"
ztfquery = "^1.28.0"
tqdm = "^4.67.1"
fastparquet = "^2024.11.0"
cartopy = "^0.24.1"
diskcache = "^5.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
