[tool.poetry]
name = "ampelmatch"
version = "0.1.0"
description = ""
authors = ["Jannis Necker <jannis.necker@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
skysurvey = "^0.17.2"
ampel-hu-astro = {path = "/Users/jannisnecker/Software/Ampel-HU-astro", develop = true}
ampel-ztf = {path = "/Users/jannisnecker/Software/Ampel-ZTF", develop = true}
rich = "^13.9.4"
ztfquery = "^1.28.0"
tqdm = "^4.67.1"
fastparquet = "^2024.11.0"
cartopy = "^0.24.1"
cachier = "^3.1.2"
typer = "^0.15.1"
ligo-skymap = "^2.1.2"
black = "^25.1.0"
isort = "^6.0.0"
ruff = "^0.9.7"
healpy = "1.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
